# spotlight

./: 00_INSTALLATION.md  ARCHITECTURE.md  CHANGELOG.md  CONTRIBUTING.md  QUICKSTART.md  README.md  application.py  discussion_renderer.py  input_controller.py  main.py  pyproject.toml  quiz_renderer.py  renderer_utils.py  session.py  task.py  task_loader.py  verify_install.py
config/: keybindings.py  settings.py
data/: Fragen_Lineare_Algebra.txt  game_state.json  tasks.json
docs/: 00_INSTALLATION.md  ARCHITECTURE.md  CHANGELOG.md  CONTRIBUTING.md  GLOW_GUIDE.md  QUICKSTART.md  TODO.md  contribution_lecturers.md  upgrade v1.1.0
src/: cli.py
src/controllers/: commands.py  input_controller.py
src/core/: application.py
src/models/: board_selection.py  board_state.py  game_show.py  game_state.py  presentation_mode.py  reveal_state.py  scoring_state.py  session.py  task.py
src/services/: board_state_store.py  game_state_store.py  glow_effect.py  renderer_utils.py  task_fingerprint.py  task_loader.py  text_normalize.py  transition_math.py  transitions.py  ui_metrics.py  ui_scale.py
tests/: test_award_blocked_team_does_not_lock.py  test_award_only_once.py  test_award_persists_across_loop.py  test_blocked_team_points.py  test_board_reload_prompt_logic.py  test_board_selection.py  test_board_state_store.py  test_buzz_blocking.py  test_game_show.py  test_game_state.py  test_note_reveal.py  test_renderer_utils.py  test_renderer_utils_normalize.py  test_reveal_state.py  test_scoring_state.py  test_task_loading.py  test_text_normalize.py  test_transition_math.py
(+13 files in other folders)
